@@ -44,6 +44,12 @@ return {
   { item = "cermet", icon = nil, stage = 2 },
   { item = "skin", icon = nil, stage = 2 },
   { item = "rayon", icon = nil, stage = 2 },
+  { item = "fertilizer", icon = nil, stage = 2 },
+  { item = "proton-receiver", icon = nil, stage = 2 },
+  { item = "proton-donor", icon = nil, stage = 2 },
+  { item = "powdered-phosphate-rock", icon = nil, stage = 2 },
+  { item = "nylon-parts", icon = nil, stage = 2 },
+  { item = "nylon", icon = nil, stage = 2 },
 
   { item = "processing-unit", icon = nil, stage = 3 },
   { item = "resistor3", icon = nil, stage = 3 },
@@ -83,5 +89,15 @@ return {
   { item = "resorcinol", icon = nil, stage = 3 },
   { item = "resilin", icon = nil, stage = 3 },
   { item = "ralesia-powder", icon = nil, stage = 3 },
-  { item = "quantum-vortex-storage-system", icon = nil, stage = 3 }
+  { item = "quantum-vortex-storage-system", icon = nil, stage = 3 },
+  { item = "quantum-dots", icon = nil, stage = 3 },
+  { item = "pyrolytic-carbon", icon = nil, stage = 3 },
+  { item = "pi-josephson-junction", icon = nil, stage = 3 }
+  { item = "nano-chip", icon = nil, stage = 3 },
+  { item = "nanocrystaline-core", icon = nil, stage = 3 },
+  { item = "ndfeb-alloy", icon = nil, stage = 3 },
+  { item = "ndfeb-powder", icon = nil, stage = 3 },
+  { item = "nv-center", icon = nil, stage = 3 },
+  { item = "nxag-matrix", icon = nil, stage = 3 },
+  { item = "nems", icon = nil, stage = 3 }
 }
